<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="ic_fam">Family Icon</string>
    <string-array name="fam_name">
        <item>Abelisauridae</item>
        <item>Allosauridae</item>
        <item>Carcharodontasauridae</item>
        <item>Diplodocidae</item>
        <item>Dromaeosauridae</item>
        <item>Hadrosauridae</item>
        <item>Spinasauridae</item>
        <item>Tyranosauridae</item>
    </string-array>
    <string name="des_fam">Family Description</string>
    <string name="period_fam">Family Life Period</string>
    <string name="char_fam">Family Characteristics</string>
    <string name="habitat_fam">Family Habitat</string>
    <string name="behav_fam">Family Behavior and Classification</string>
    <string name="din_name">Dino Name</string>
    <string name="ic_dino">Dino Icon</string>
    <string name="des_dino">Dinosaurs Description</string>
    <string name="dino_food">Dino Food</string>
    <string name="char_dino">Dinos\' Characteristics</string>
    <string name="height_dino">Dinos\' Height</string>
    <string name="weight_dino">Dinos\' Weight</string>
    <string name="ws_dino">Weakness and Strength</string>
    <string name="habitat_dino">Family Habitat</string>
    <string name="behav_dino">Family Behavior and Classification</string>
    <string-array name="sIn">
        <item>0</item>
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>11</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
    </string-array>
    <string-array name="eIn">
        <item>2</item>
        <item>4</item>
        <item>7</item>
        <item>10</item>
        <item>13</item>
        <item>15</item>
        <item>17</item>
        <item>20</item>
    </string-array>
    <string-array name="fam_icon">
        <item>@drawable/ic_abeli</item>
        <item>@drawable/ic_allo</item>
        <item>@drawable/ic_carca</item>
        <item>@drawable/ic_diplo</item>
        <item>@drawable/ic_droma</item>
        <item>@drawable/ic_hadro</item>
        <item>@drawable/ic_spino</item>
        <item>@drawable/ic_tyra</item>
    </string-array>
    <string-array name="abeli_icon">
        
        <item>@drawable/abelisaurus</item>
        <item>@drawable/carnotaurus</item>
        <item>@drawable/majungasaurus</item>
        
        <item>@drawable/allosaurus</item>
        <item>@drawable/saurophanax</item>

        
        <item>@drawable/carcharodontosaurus</item>
        <item>@drawable/giganotosaurus</item>
        <item>@drawable/mapusaurus</item>

        
        <item>@drawable/diplodocus</item>
        <item>@drawable/apatosaurus</item>
        <item>@drawable/barosaurus</item>

        
        <item>@drawable/velociraptor</item>
        <item>@drawable/deinonychus</item>
        <item>@drawable/utahraptor</item>

        
        <item>@drawable/edmontosaurus</item>
        <item>@drawable/parasaurolophus</item>

        
        <item>@drawable/spinosaurus</item>
        <item>@drawable/suchimosaurus</item>

        
        <item>@drawable/tyranosaurus</item>
        <item>@drawable/albertosaurus</item>
        <item>@drawable/dasple</item>
    </string-array>
    <string-array name="fam_description">
        <item>Abelisauridae: A family of theropod dinosaurs known for their short, deep skulls and reduced forelimbs. They were primarily carnivorous and lived during the Cretaceous period.</item>
        <item>Allosauridae: Predatory dinosaurs characterized by their large size, sharp teeth, and strong jaws. They were apex predators during the Late Jurassic period.</item>
        <item>Carcharodontasauridae: A group of large carnivorous dinosaurs similar to the Tyrannosauridae. They had serrated teeth and lived during the Late Jurassic to Early Cretaceous period.</item>
        <item>Diplodocidae: Long-necked sauropod dinosaurs known for their whip-like tails and elongated bodies. They were herbivores and lived during the Late Jurassic period.</item>
        <item>Dromaeosauridae: A family of agile, bird-like dinosaurs with sharp claws on their feet. They were carnivorous predators and lived during the Cretaceous period.</item>
        <item>Hadrosauridae: Duck-billed dinosaurs known for their unique dental structures used for chewing tough plant material. They were herbivores and lived during the Late Cretaceous period.</item>
        <item>Spinasauridae: Large carnivorous dinosaurs characterized by their long spines running along their backs. They were apex predators and lived during the Cretaceous period.</item>
        <item>Tyranosauridae: Powerful carnivorous dinosaurs with large skulls, sharp teeth, and strong hind limbs. They were apex predators during the Late Cretaceous period.</item>
    </string-array>
    <string-array name="fam_life_periods">
        <item>Abelisauridae: Cretaceous Period</item>
        <item>Allosauridae: Jurassic Period</item>
        <item>Carcharodontasauridae: Cretaceous Period</item>
        <item>Diplodocidae: Jurassic Period</item>
        <item>Dromaeosauridae: Jurassic to Cretaceous Periods</item>
        <item>Hadrosauridae: Late Cretaceous Period</item>
        <item>Spinasauridae: Cretaceous Period</item>
        <item>Tyrannosauridae: Cretaceous Period</item>
    </string-array>
    <string-array name="fam_characteristics">
        
        <item>Abelisauridae were a group of theropod dinosaurs known for their short, deep skulls with robust jaws and small, often reduced, forelimbs.</item>

        
        <item>Allosauridae were large theropod dinosaurs characterized by their large skulls, sharp teeth, and powerful hind limbs, suggesting they were apex predators.</item>

        
        <item>Carcharodontasauridae were a family of large carnivorous dinosaurs with serrated teeth similar to those of modern-day sharks, indicating their predatory nature.</item>

        
        <item>Diplodocidae were a group of long-necked, herbivorous sauropod dinosaurs known for their whip-like tails and elongated, slender bodies.</item>

        
        <item>Dromaeosauridae were small to medium-sized theropod dinosaurs characterized by their sickle-shaped claws on the second toe of each hind foot, indicating they were agile predators.</item>

        
        <item>Hadrosauridae, also known as duck-billed dinosaurs, were herbivorous dinosaurs with flattened, duck-like bills used for cropping vegetation, and some species had elaborate head crests.</item>

        
        <item>Spinosauridae were a family of large, carnivorous dinosaurs with elongated spines on their backs, believed to have supported a sail-like structure, and were adapted for both land and water environments.</item>

        
        <item>Tyranosauridae were a family of large theropod dinosaurs known for their massive size, powerful jaws, and small, two-fingered forelimbs, with Tyrannosaurus rex being the most famous member.</item>
    </string-array>
    <string-array name="fam_habitats">
        <item>Abelisauridae: Abelisaurids lived in various habitats, including forests, plains, and coastal regions. They were primarily found in what is now South America, Africa, Madagascar, India, and Europe during the Cretaceous period.</item>
        <item>Allosauridae: Allosaurids inhabited a wide range of environments, including forests, plains, and swamps. They were distributed across North America, Europe, Africa, and Australia during the Jurassic and Cretaceous periods.</item>
        <item>Carcharodontasauridae: Carcharodontosaurids were primarily found in warm, tropical environments such as floodplains, coastal regions, and forested areas. They lived in regions that are now located in North and South America, Africa, Europe, and Asia during the Cretaceous period.</item>
        <item>Diplodocidae: Diplodocids roamed open floodplain environments with lush vegetation. They were mainly found in North and South America during the Late Jurassic period.</item>
        <item>Dromaeosauridae: Dromaeosaurids inhabited various environments, including forests, plains, and coastal regions. They were distributed across North America, Europe, Asia, and other continents during the Jurassic and Cretaceous periods.</item>
        <item>Hadrosauridae: Hadrosaurids were widespread and lived in diverse habitats such as forests, swamps, and floodplains. They were mainly found in North America, Asia, Europe, and Antarctica during the Late Cretaceous period.</item>
        <item>Spinasauridae: Spinosaurids inhabited environments near rivers, lakes, and coastal regions, including swampy and forested areas. They were primarily found in Africa, South America, and Europe during the Cretaceous period.</item>
        <item>Tyranosauridae: Tyrannosaurids lived in a variety of environments ranging from forests to plains and even coastal regions. They were predominantly found in North America and Asia during the Late Cretaceous period.</item>
    </string-array>
    <string-array name="fam_classification">
        <item>Abelisauridae: Abelisaurids were a diverse group of theropod dinosaurs known for their short, deep skulls and powerful jaws. They were primarily carnivorous and inhabited regions of Gondwana during the Cretaceous period.</item>
        <item>Allosauridae: Allosaurids were large carnivorous dinosaurs characterized by their robust skulls, sharp teeth, and powerful hind limbs. They were apex predators during the Late Jurassic period and are believed to have been active hunters.</item>
        <item>Carcharodontasauridae: Carcharodontosaurids were a family of large theropod dinosaurs similar to the Tyrannosaurids. They had serrated teeth and were formidable predators, inhabiting various regions during the Cretaceous period.</item>
        <item>Diplodocidae: Diplodocids were a family of sauropod dinosaurs known for their long necks and whip-like tails. They were herbivores and likely fed on vegetation from high trees during the Late Jurassic period.</item>
        <item>Dromaeosauridae: Dromaeosaurids were a diverse group of theropod dinosaurs characterized by their distinctive sickle-shaped claws on the second toe of each foot. They were agile predators and possibly had feathers, inhabiting various environments during the Cretaceous period.</item>
        <item>Hadrosauridae: Hadrosaurids, also known as duck-billed dinosaurs, were herbivorous dinosaurs with unique dental structures adapted for grinding vegetation. They were widespread during the Late Cretaceous period and likely lived in herds.</item>
        <item>Spinasauridae: Spinosaurids were a family of large carnivorous dinosaurs characterized by their elongated, crocodile-like skulls and distinctive sail-like structures on their backs. They were piscivores, feeding on fish and other aquatic prey, and lived during the Cretaceous period.</item>
        <item>Tyrannosauridae: Tyrannosaurids were a family of large carnivorous dinosaurs known for their massive size, powerful jaws, and small forelimbs. They were apex predators during the Late Cretaceous period and included species like Tyrannosaurus rex.</item>
    </string-array>
</resources>