<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:theme="@style/Base.Theme.DinoPedia">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/myBackground">

        <ImageView
            android:id="@+id/ivDetail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_abeli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/acme"
            android:text="@string/fam_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:theme="?attr/myColorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/ivDetail"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="44dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetail">

            <TextView
                android:id="@+id/tvDesFam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:fontFamily="@font/acme"
                android:theme="?attr/myColorText"
                android:text="@string/des_fam"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDetDesFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="44dp"
                android:theme="?attr/myColorText"
                android:fontFamily="@font/acme"
                android:text="@string/des_fam" />

            <TextView
                android:id="@+id/tvPeriodFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="10dp"
                android:theme="?attr/myColorText"
                android:fontFamily="@font/acme"
                android:text="@string/period_fam"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDetPeriodFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:theme="?attr/myColorText"
                android:fontFamily="@font/acme"
                android:text="@string/period_fam" />

            <TextView
                android:id="@+id/tvCharFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="10dp"
                android:theme="?attr/myColorText"
                android:fontFamily="@font/acme"
                android:text="@string/char_fam"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDetCharFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:theme="?attr/myColorText"
                android:fontFamily="@font/acme"
                android:text="@string/char_fam" />

            <TextView
                android:id="@+id/tvHabitFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/acme"
                android:theme="?attr/myColorText"
                android:text="@string/habitat_fam"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDetHabitFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:fontFamily="@font/acme"
                android:theme="?attr/myColorText"
                android:text="@string/habitat_fam" />

            <TextView
                android:id="@+id/tvBehavFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/acme"
                android:theme="?attr/myColorText"
                android:text="@string/behav_fam"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDetBehavFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:theme="?attr/myColorText"
                android:fontFamily="@font/acme"
                android:text="@string/behav_fam" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="20dp"
                android:text="Check Genus"
                android:theme="@style/Button"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>